--- a/estilo.css
+++ b/estilo.css
@@ -120,3 +120,60 @@ body{
     margin-top: 30px;
     border: 500px;
  }
+.label{
+    font-family: "Nunito";
+    font-weight: 400px;
+    display: block;
+    text-align: left;
+
+}
+.campo{
+    width: 100%;
+    padding: 10px;
+    font-family: "Nunito";
+    font-weight: 300px;
+    margin-bottom: 10px;
+    box-sizing: border-box;
+
+}
+
+body, html {
+    height: 100%;
+    margin: 0;
+    overflow: hidden;
+}
+
+video {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover; /* Garante que o vídeo ocupe toda a tela sem distorcer */
+    z-index: -1; /* Coloca o vídeo atrás do conteúdo da página */
+}
+
+/* Exemplo de estilo para o conteúdo da página */
+.content {
+    position: relative;
+    z-index: 1;
+    color: white;
+    text-align: center;
+    padding: 20px;
+}
+
+.botao-comprar{
+            font-size: 16px;
+            background-color: #f1eb3e; /* Cor de fundo inicial */
+            color: white;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            transition: background-color 0.3s ease; /* Transição suave */
+}
+
+.botao-comprar:hover{
+    transform: scale(1.1);
+    background-color: #26dfeb;
+
+}
